--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,8 @@ theme: "ed."
 
 prose:
   rooturl: '_articles'
-  #siteurl: 'http://prose.github.io/starter/'
-  #relativeLinks: 'http://prose.github.io/starter/links.jsonp'
+  siteurl: 'https://digbmc.github.io/emperor-moon/'
+  relativeLinks: 'https://digbmc.github.io/emperor-moon/links.jsonp'
   media: 'media'
   metadata:
     _articles:
@@ -92,19 +92,4 @@ prose:
         field:
           element: "text"
           label: "Splash image"
-          value: ""
-    _posts/static:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "page"
-      - name: "title"
-        field:
-          element: "text"
-          label: "Title"
-          value: ""
-      - name: "permalink"
-        field:
-          element: "text"
-          label: "Permalink"
           value: ""
